------------------------------------------------------------------------------
  qSharp 2.1.1 [TBA]
------------------------------------------------------------------------------

  - Fix: sanity check against protocol version for guids

------------------------------------------------------------------------------
  qSharp 2.1.0 [2014.10.01]
------------------------------------------------------------------------------

  - Redesigned lambdas and projections handling

------------------------------------------------------------------------------
  qSharp 2.0.6 [2014.09.11]
------------------------------------------------------------------------------

  - Fix: reading of generic null (::) embedded in lists

------------------------------------------------------------------------------
  qSharp 2.0.5 [2014.09.01]
------------------------------------------------------------------------------

  - Rewrite QBasicConnection.Open() and QBasicConnection.Close() methods to use 
    QBasicConnection.IsConnected() instead of null check

------------------------------------------------------------------------------
  qSharp 2.0.4 [2014.07.29]
------------------------------------------------------------------------------

  - QListener pushes all types of exceptions via error event handler

------------------------------------------------------------------------------
  qSharp 2.0.3 [2014.06.10]
------------------------------------------------------------------------------

  - Fix: behaviour of toString and fromString methods in QTime, QSecond
         and QMinute types for dates outside of 0-24 hours scope

------------------------------------------------------------------------------
  qSharp 2.0.2 [2014.06.06]
------------------------------------------------------------------------------

  - Improve performance while retrieving large data samples
  - API: configurable maximum size of data chunk during data retrieval
