@@ -114,6 +114,8 @@ ED00000080
 0B00020000000000
 ("quick"; "brown"; "fox"; "jumps"; "over"; "a lazy"; "dog")
 0000070000000A0005000000717569636B0A000500000062726F776E0A0003000000666F780A00050000006A756D70730A00040000006F7665720A000600000061206C617A790A0003000000646F67
+("quick"; "brown"; "fox")
+0000030000000A0005000000717569636B0A000500000062726F776E0A0003000000666F78
 2000.01.04D05:36:57.600 0Np
 0C000200000000C0CAFA20FE00000000000000000080
 (2001.01m; 0Nm)
