@@ -1,8 +1,9 @@
 ------------------------------------------------------------------------------
-  qSharp 2.1.1 [TBA]
+  qSharp 2.1.1 [2015.03.23]
 ------------------------------------------------------------------------------
 
   - Fix: sanity check against protocol version for guids
+  - Add serialization for type: char[][]
 
 ------------------------------------------------------------------------------
   qSharp 2.1.0 [2014.10.01]
